<?xml version="1.0"?>
<package>
  <name>rosgo</name>
  <version>0.0.0</version>
  <description>The rosgo metapackage</description>

  <maintainer email="akio7141@gmail.com">Aki Ochiai</maintainer>

  <license>Apache License 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gengo</run_depend>
  <run_depend>rosgo_build_tools</run_depend>
  <run_depend>rosgo_core</run_depend>
  <run_depend>rosgo_messages</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
