<?xml version="1.0"?>
<package>
  <name>rosgo_core</name>
  <version>0.0.0</version>
  <description>The rosgo_core metapackage</description>

  <maintainer email="akio7141@gmail.com">Akiyoshi Ochiai</maintainer>

  <license>Apache License 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gengo</run_depend>
  <run_depend>rosgo</run_depend>
  <run_depend>rosgo_messages</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
